Update project structure for gcloud deployment

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -29,8 +29,8 @@
   </div>
 
   <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/main1.js"></script>
-  <script src="js/socket.io.js"></script>
+  <script src="static/main.js"></script>
+  <script src="static/main1.js"></script>
+  <script src="static/socket.io.js"></script>
 </body>
 </html>
